--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,7 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+*obj filter=lfs diff=lfs merge=lfs -text
+*fbx filter=lfs diff=lfs merge=lfs -text
+*psd filter=lfs diff=lfs merge=lfs -text
+*mb filter=lfs diff=lfs merge=lfs -text
